# free-pt-consultation

./: .gitignore  README.md
ios/VoilaWinnerApp/VoilaWinnerApp/: ContentView.swift  CoreModels.swift  Info.plist  VoilaWinnerApp.entitlements  VoilaWinnerAppApp.swift
ios/VoilaWinnerApp/VoilaWinnerApp.xcodeproj/: project.pbxproj
python/: pyproject.toml
python/src/: main.py
python/src/data_ingestion/: health_stats.py  models.py  router.py
python/src/data_ingestion/sources/: apple_health.py  garmin.py  intake_forms.py  renpho.py
python/src/research/: extract.py  summarize.py
python/tests/: test_router.py
